# tag_world

./: CMakeLists.txt  README.md  README.txt  README2.txt  package.xml
blender/: tag.blend  tag2.blend  tag2.blend1  tag2.blend2
launch/: spawn_box.launch  tag_world.launch
meshes/: STEPS.txt  apriltags0.dae  apriltags1.dae  tags0.dae  tags1.dae  tags2.dae
meshes/alvartags/: alvartags0.dae  alvartags1.dae  alvartags2.dae
meshes/apriltags/: apriltags0.dae  apriltags1.dae  apriltags10.dae  apriltags11.dae  apriltags12.dae  apriltags13.dae  apriltags14.dae  apriltags15.dae  apriltags2.dae  apriltags3.dae  apriltags4.dae  apriltags5.dae  apriltags6.dae  apriltags7.dae  apriltags8.dae  apriltags9.dae
meshes/old(singletag)/: tag0.dae  tag1.dae  tag10.dae  tag11.dae  tag12.dae  tag13.dae  tag14.dae  tag2.dae  tag3.dae  tag4.dae  tag5.dae  tag6.dae  tag7.dae  tag8.dae  tag9.dae
meshes/old(singletag)/script/: duplicate_dae.py
models/: tag_box.urdf.xacro  tag_box2.urdf.xacro  tag_box3.urdf.xacro
