cmake_minimum_required(VERSION 2.8.3)
project(tag_world)

find_package(catkin REQUIRED COMPONENTS
  ar_track_alvar
)




## Declare a cpp library
# add_library(iarc_control
#   src/${PROJECT_NAME}/iarc_control.cpp
# )

## Declare a cpp executable

## Add cmake target dependencies of the executable/library
## as an example, message headers may need to be generated before nodes
# add_dependencies(iarc_control_node iarc_control_generate_messages_cpp)

## Specify libraries to link a library or executable target against


## Mark executables and/or libraries for installation

