<?xml version="1.0"?>
<package>
  <name>tag_world</name>
  <version>0.3.0</version>
  <description>Creates visual markers in Gazebo </description>
  <maintainer email="nick.dave.sullivan@gmail.com">Nick Sullivan</maintainer>
  <author     email="nick.dave.sullivan@gmail.com">Nick Sullivan</author>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>xacro</build_depend>
</package>
